--- a/etc/nginx/conf.d/discourse.conf
+++ b/etc/nginx/conf.d/discourse.conf
@@ -60,7 +60,7 @@ server {
   client_max_body_size 10m ;
 
   # path to discourse's public directory
-  set $public /app/discourse/public;
+  set $public /opt/discourse/public;
 
   # Prevent Internet Explorer 10 "compatibility mode", which breaks Discourse.
   # If other subdomains under your domain are supposed to use Internet Explorer Compatibility mode,
